--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <meta property="og:site_name" content="gamehtml5.github.io" />
       <meta property="og:description" content="Unlock entertainment and learning at our website with a collection of HTML5 games curated for high school students. Explore engaging content tailored to your interests for an immersive experience" />
       <meta property="og:type" content="website" />
-      <meta property="og:image" content="images/icon_game.png">
+      <meta property="og:image" content="https://gamehtml5.github.io/images/icon_game.png">
 
 
 						<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
